product page design

--- a/src/app/home/product/product.component.html
+++ b/src/app/home/product/product.component.html
@@ -1,2 +1,6 @@
-<app-sd-table [data]="productArry" [basicConfig]="tableConfig" [tableHeader]="tableHeader"
-    (deleteClickEvent)="deleteProduct($event)"></app-sd-table>
+<div class="container">
+    <div class="row mt10">
+        <app-sd-table [data]="productArry" [basicConfig]="tableConfig" [tableHeader]="tableHeader"
+            (deleteClickEvent)="deleteProduct($event)"></app-sd-table>
+    </div>
+</div>
