sorting and row per page added in table component

--- a/src/app/home/product/product.component.html
+++ b/src/app/home/product/product.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="row mt10">
         <app-sd-table [data]="productArry" [basicConfig]="tableConfig" [tableHeader]="tableHeader"
-            (deleteClickEvent)="deleteProduct($event)"></app-sd-table>
+            (deleteClickEvent)="deleteProduct($event)" (rowPerPageChangeEvent)="showProductPerPage($event)"
+            (sortColumnEvent)="productSorting($event)"></app-sd-table>
     </div>
 </div>
