--- a/src/app/site-controls/sd-table/sd-table.component.scss
+++ b/src/app/site-controls/sd-table/sd-table.component.scss
@@ -10,3 +10,19 @@
 .headings {
     vertical-align: -webkit-baseline-middle;;
 }
+
+.mt10{
+    margin-top: 10px;
+}
+
+.btn-sm {
+    line-height: 1 !important;
+}
+
+.link {
+    cursor: pointer;
+}
+
+.table-header {
+    text-align: center !important;
+}
